--- a/chol_vansh_2.html
+++ b/chol_vansh_2.html
@@ -42,9 +42,11 @@
             <h4 id="explanation"></h4>
         </div>
         <a href="https://wa.me/?text=Check%20out%20this%20page%20https://learnwithprathamesh.in" target="_blank">Share on WhatsApp</a>
+         <button onclick="window.location.href='https://wa.me/?text=Check%20out%20this%20page%20https://learnwithprathamesh.in';">Share with your friend</button>
     </div>
     <script src="chol_vansh_2.js"></script>
     <script src="common.js"></script>
 </body>
+
 
 </html>
