--- a/compititiveExam/histry/histryQuizTopic.html
+++ b/compititiveExam/histry/histryQuizTopic.html
@@ -46,8 +46,8 @@
       <button class="quiz_topic_button" onclick="goToQuiz('vaidik_sabhyata_3')">17. वैदिक सभ्यता 3</button>
       <button class="quiz_topic_button" onclick="goToQuiz('vaidik_sabhyata_4')">18. वैदिक सभ्यता 4</button>
 
-      <button class="quiz_topic_button" onclick="goToQuiz('maha_janpad0_ka_uday_1')">19. महाजनपदों का उदय 1</button>
-      <button class="quiz_topic_button" onclick="goToQuiz('maha_janpad0_ka_uday_2')">20. महाजनपदों का उदय 2</button>
+      <button class="quiz_topic_button" onclick="goToQuiz('maha_janpado_ka_uday_1')">19. महाजनपदों का उदय 1</button>
+      <button class="quiz_topic_button" onclick="goToQuiz('maha_janpado_ka_uday_2')">20. महाजनपदों का उदय 2</button>
 
       <button class="quiz_topic_button" onclick="goToQuiz('jain_dharm_1')">21. जैन धर्म 1</button>
       <button class="quiz_topic_button" onclick="goToQuiz('jain_dharm_2')">22. जैन धर्म 2</button>
@@ -178,5 +178,6 @@
   </script>
   <script src="../../footer.js"></script>
 </body>
+
 
 </html>
