--- a/compititiveExam/histry/jain_dharm_1.html
+++ b/compititiveExam/histry/jain_dharm_1.html
@@ -19,8 +19,9 @@
 </head>
 <body>
     <div id="root"></div>
-    <script src="quizHtml.js"></script>
+    <script src="../../quizHtml.js"></script>
     <script src="jain_dharm_1.js"></script>  
     <script src="../../quizCommon.js"></script>
 </body>
+
 </html>
