--- a/compititiveExam/histry/bharat_ke_yavan_rajy_1.html
+++ b/compititiveExam/histry/bharat_ke_yavan_rajy_1.html
@@ -14,7 +14,7 @@
     <title>LearnWithPrathamesh.in</title>
     <link rel="stylesheet" href="../../footerStyle.css">
     <link rel="stylesheet" href="../../navBarStyle.css">
-    <link rel="stylesheet" href="quiz.css">
+    <link rel="stylesheet" href="../../quiz.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
 <body>
@@ -23,4 +23,5 @@
     <script src="bharat_ke_yavan_rajy_1.js"></script>  
     <script src="../../quizCommon.js"></script>
 </body>
+
 </html>
