--- a/compititiveExam/geography/bahy_mandal_1.html
+++ b/compititiveExam/geography/bahy_mandal_1.html
@@ -20,8 +20,9 @@
 
 <body>
     <div id="root"></div>
-    <script src="../../quizCommon.js"></script>
+    <script src="../../quizHtml.js"></script>
     <script src="bahy_mandal_1.js"></script>
    <script src="../../quizCommon.js"></script>
 </body>
+
 </html>
