--- a/compititiveExam/geography/nadiyo_ke_kinare_vishv_ke_nagar_1.html
+++ b/compititiveExam/geography/nadiyo_ke_kinare_vishv_ke_nagar_1.html
@@ -19,7 +19,8 @@
 <body>
     <div id="root"></div>
     <script src="../../quizHtml.js"></script>
-    <script src="nadiyo_ke kinare_vishv_ke_nagar_1.js"></script>  
+    <script src="nadiyo_ke_kinare_vishv_ke_nagar_1.js"></script>  
     <script src="../../quizCommon.js"></script>
 </body>
 </html>
+
