--- a/compititiveExam/geography/vishv_ke_pramukh_desho_ki_mudra_2.html
+++ b/compititiveExam/geography/vishv_ke_pramukh_desho_ki_mudra_2.html
@@ -18,7 +18,8 @@
 </head>
 <body>
     <div id="root"></div>
-    <script src=".../../quizHtml.js"></script>
-    <script src="vishv_ke_pramukh_desho_ki_mudra_2.js"></script>  
+    <script src="../../quizHtml.js"></script>
+    <script src="vishv_ke_pramukh_desho_ki_mudra_2.js"></script>    
     <script src="../../quizCommon.js"></script>
 </body>
+
