--- a/compititiveExam/geography/geographyQuizTopic.html
+++ b/compititiveExam/geography/geographyQuizTopic.html
@@ -24,7 +24,7 @@
   <br>
   <div class="Quiztopics">
     <h1>भूगोल</h1>
-    <h1>SELECT ANY ONE</h1>
+    <h1>CLICK ANY ONE</h1>
     <div class="quiz_topic_button-container">
       <button class="quiz_topic_button" onclick="goToQuiz('bharat_ka_bhugol_1')">1. भारत का भूगोल 1</button>
       <button class="quiz_topic_button" onclick="goToQuiz('bharat_ka_bhugol_2')">2. भारत का भूगोल 2</button>
@@ -228,5 +228,6 @@
 
 
 </html>
+
 
 
