--- a/compititiveExam/histry/histryQuizTopic.html
+++ b/compititiveExam/histry/histryQuizTopic.html
@@ -24,6 +24,7 @@
   <br>
   <div class="Quiztopics">
     <h1>इतिहास</h1>
+    <h1>CLICK ANY ONE</h1>
     <div class="quiz_topic_button-container">
       <button class="quiz_topic_button" onclick="goToQuiz('pragaitihasik_kal_1')">1. प्रागैतिहासिक काल 1</button>
       <button class="quiz_topic_button" onclick="goToQuiz('pragaitihasik_kal_2')">2. प्रागैतिहासिक काल 2</button>
@@ -181,3 +182,4 @@
 
 
 </html>
+
