--- a/indexCompititiveExam.html
+++ b/indexCompititiveExam.html
@@ -26,6 +26,7 @@
   <div class="landing_page">
     <h1 class="select_sub_heading">SELECT YOUR SUBJECT</h1>
     <div class="button-container">
+        <button class="landing_page_button" onclick="goToSubject('compititiveExam/hindi/hindi_index')">हिंदी</button>
       <button class="landing_page_button" onclick="goToSubject('compititiveExam/histry/histry_index')">इतिहास</button>
       <button class="landing_page_button" onclick="goToSubject('compititiveExam/geography/geography_index')">भूगोल</button>
       <!-- <button class="landing_page_button" onclick="goToSubject('science_index')">विज्ञान</button>
@@ -78,4 +79,5 @@
   <script src="main.js"></script>
   <script src="footer.js"></script>
 </body>
+
 </html>
