--- a/compititiveExam/hindi/hindiQuizTopic.html
+++ b/compititiveExam/hindi/hindiQuizTopic.html
@@ -112,6 +112,7 @@
 
 
     </div>
+    <h1>more will add soon</h1>
   </div>
   <script>
     function goToQuiz(topic) {
@@ -120,5 +121,6 @@
   </script>
   <script src="../../footer.js"></script>
 </body>
+
 
 </html>
