--- a/compititiveExam/hindi/hindiQuizTopic.html
+++ b/compititiveExam/hindi/hindiQuizTopic.html
@@ -12,7 +12,7 @@
   </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>histry topics Topics</title>
+  <title>Hindi quiz topics</title>
   <link rel="stylesheet" href="../../footerStyle.css">
     <link rel="stylesheet" href="../../navBarStyle.css">
   <link rel="stylesheet" href="../../compititiveSubjectStyle.css">
@@ -124,3 +124,4 @@
 
 
 </html>
+
