--- a/index.html
+++ b/index.html
@@ -21,58 +21,7 @@
 
 
 <body>  
-  <script src="navbar.js"></script>
-  <br>
-  <div class="landing_page">
-    <h1 class="select_sub_heading">SELECT YOUR PREPARATION JOURNEY</h1>
-    <div class="button-container">
-      <button class="landing_page_button" onclick="goToSubject('indexCompititiveExam')">Compititive Exam Preparation</button>
-      <!-- <button class="landing_page_button" onclick="goToSubject('indexUpBoardExam')">UP Board Exam Preparation</button> -->
-     
-    </div>
-    <br>
-    <div class="info_container">
-      <p> &nbsp;&nbsp;&nbsp;&nbsp; Welcome to LearnWithPrathamesh.in, your go-to platform for high-quality, free study
-        material and quizzes for various competitive exams . We are committed to providing all aspiring
-        students with free, comprehensive, and easily accessible content. Our platform covers a wide
-        range of subjects including History, Geography, Science, Hindi, Computer , and English,
-        designed
-        to help you excel in exams like <br><br> <span style="color: rgb(220, 188, 11);"><b><u>UPSC, SSC,UPP, NDA, Railway,
-              State Exams and much more.</u></b></span>
-      </p><br><br>
-      <h2>Features of Our Website:</h2>
-      <br>
-
-
-      <h3>Comprehensive Study Materials for Every Subject:</h3>
-
-      <p>&nbsp;&nbsp;&nbsp;&nbsp;Each subject is broken down into smaller topics and chapters, making it easier for you
-        to understand
-        and study systematically. All materials are free, ensuring that you have
-        access to all the resources you need at your fingertips.
-      </p><br>
-
-      <h3>Free and Accessible:</h3>
-      <p>&nbsp;&nbsp;&nbsp;&nbsp;All study materials and quizzes on LearnWithPrathamesh.in are completely free. We
-        believe that
-        quality education should be available to everyone, regardless of financial resources. Our goal
-        is to democratize learning by offering top-quality content at no cost.
-      </p><br>
-
-      <h3>Subject-Wise Quizzes:</h3>
-      <p>&nbsp;&nbsp;&nbsp;&nbsp;After studying each topic, you can test your knowledge with our subject-specific
-        quizzes. These
-        quizzes will help you track your progress, reinforce learning, and identify weak areas that need
-        more focus.
-
-        Regular practice will enhance your exam readiness and boost your confidence.
-      </p><br>
-    </div>
-  </div>
-  <div class="footer">
-
-  </div>
-  <script src="main.js"></script>
-  <script src="footer.js"></script>
+  <h1>CURRENTLY NOT AVAILABLE <BR> IT MAY AVALIABLE AFTER 15 DAYS </h1>
 </body>
+
 </html>
