--- a/compititiveExam/hindi/hindiQuizTopic.html
+++ b/compititiveExam/hindi/hindiQuizTopic.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -74,7 +74,7 @@
       <!-- <button class="quiz_topic_button" onclick="goToQuiz('tatsam_tadbhav_2')">26. तत्सम तद्भव part 2</button> -->
       <!-- <button class="quiz_topic_button" onclick="goToQuiz('tatsam_tadbhav_3')">27. तत्सम तद्भव part 3</button> -->
 
-      <button class="quiz_topic_button" onclick="goToQuiz('deshaj_shabd_1')">28. देशज शब्द part 1</button>
+<!--       <button class="quiz_topic_button" onclick="goToQuiz('deshaj_shabd_1')">28. देशज शब्द part 1</button>
 
       <button class="quiz_topic_button" onclick="goToQuiz('deshaj_shabd_2')">29. देशज शब्द part 2</button>
 
@@ -88,9 +88,9 @@
       <button class="quiz_topic_button" onclick="goToQuiz('pryayvachi_shabd_4')">35. पर्यायवाची शब्द part 4</button>
       <button class="quiz_topic_button" onclick="goToQuiz('pryayvachi_shabd_5')">36. पर्यायवाची शब्द part 5</button>
 
-      <button class="quiz_topic_button" onclick="goToQuiz('vilom_shabd_1')">37. विलोम शब्द part 1</button>
+      <button class="quiz_topic_button" onclick="goToQuiz('vilom_shabd_1')">37. विलोम शब्द part 1</button> -->
       <!-- <button class="quiz_topic_button" onclick="goToQuiz('vilom_shabd_2')">38. विलोम शब्द part 2</button> -->
-      <button class="quiz_topic_button" onclick="goToQuiz('vilom_shabd_3')">39. विलोम शब्द part 2</button>
+<!--       <button class="quiz_topic_button" onclick="goToQuiz('vilom_shabd_3')">39. विलोम शब्द part 2</button>
 
       <button class="quiz_topic_button" onclick="goToQuiz('sangya_1')">40. संज्ञा part 1</button>
 
@@ -106,7 +106,7 @@
       <!-- <button class="quiz_topic_button" onclick="goToQuiz('kriya_1')">46. क्रिया part 1</button>
       <button class="quiz_topic_button" onclick="goToQuiz('kriya_2')">47. क्रिया part 2</button> -->
 
-      <button class="quiz_topic_button" onclick="goToQuiz('kriya_visheshan_1')">48. क्रिया विशेषण part 1</button>
+<!--       <button class="quiz_topic_button" onclick="goToQuiz('kriya_visheshan_1')">48. क्रिया विशेषण part 1</button>
 
       <button class="quiz_topic_button" onclick="goToQuiz('kriya_visheshan_2')">49. क्रिया विशेषण part 2</button>
 
@@ -123,5 +123,7 @@
 </body>
 
 
-</html>
+</html> -->
 
+ -->
+ -->
