--- a/compititiveExam/geography_study_content/geography_stdMlt_index.html
+++ b/compititiveExam/geography_study_content/geography_stdMlt_index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -214,4 +214,5 @@
   <script src="../../footer.js"></script>
 </body>
 
-</html>
+
+</html> -->
