--- a/compititiveExam/history_study_content/histry_study_material_index.html
+++ b/compititiveExam/history_study_content/histry_study_material_index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-  <script src="navbar.js"></script> 
+<!--   <script src="navbar.js"></script> 
   <br>
   <div class="compititiveExamStMtlTopicContainer">
     <h1>SELECT YOUR TOPIC</h1>
@@ -113,7 +113,10 @@
       window.location.href = `${topic}.html`;
     }
   </script>
-  <script src="../../footer.js"></script>
+  <script src="../../footer.js"></script> -->
+
+  <H1> CURRENTLY NOT WORKING <BR> IT WILL BE IN USE AFTER 15 DAYS </H1>
 </body>
+
 
 </html>
