--- a/compititiveExam/geography/geographyQuizTopic.html
+++ b/compititiveExam/geography/geographyQuizTopic.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <script src="navbar.js"></script>
+<!--   <script src="navbar.js"></script>
   <br>
   <div class="Quiztopics">
     <h1>भूगोल</h1>
@@ -223,7 +223,8 @@
       window.location.href = `${topic}.html`;
     }
   </script>
-  <script src="../../footer.js"></script>
+  <script src="../../footer.js"></script> -->
+  <H1> CURRENTLY UNAVAILABLE, IT MAY AVAILABLE AFTER SOME DAYS </H1>
 </body>
 
 
@@ -232,4 +233,5 @@
 
 
 
- -->
+
+
