--- a/compititiveExam/geography_study_content/geography_stdMlt_index.html
+++ b/compititiveExam/geography_study_content/geography_stdMlt_index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-  <script src="navbar.js"></script>
+<!--   <script src="navbar.js"></script>
   <br>
   <div class="compititiveExamStMtlTopicContainer">
     <h1>SELECT YOUR TOPIC</h1>
@@ -211,8 +211,11 @@
       window.location.href = `${topic}.html`;
     }
   </script>
-  <script src="../../footer.js"></script>
+  <script src="../../footer.js"></script> -->
+
+  <H1> CURRENTLY UNAVAILABLE, IT MAY AVAILABLE AFTER SOME DAYS </H1>
 </body>
 
 
-</html> -->
+</html>
+
