--- a/indexCompititiveExam.html
+++ b/indexCompititiveExam.html
@@ -27,8 +27,8 @@
     <h1 class="select_sub_heading">SELECT YOUR SUBJECT</h1>
     <div class="button-container">
         <button class="landing_page_button" onclick="goToSubject('compititiveExam/hindi/hindi_index')">हिंदी</button>
-      <button class="landing_page_button" onclick="goToSubject('compititiveExam/histry/histry_index')">इतिहास</button>
-      <button class="landing_page_button" onclick="goToSubject('compititiveExam/geography/geography_index')">भूगोल</button>
+<!--       <button class="landing_page_button" onclick="goToSubject('compititiveExam/histry/histry_index')">इतिहास</button>
+      <button class="landing_page_button" onclick="goToSubject('compititiveExam/geography/geography_index')">भूगोल</button> -->
       <!-- <button class="landing_page_button" onclick="goToSubject('science_index')">विज्ञान</button>
       <button class="landing_page_button" onclick="goToSubject('computer_index')">कंप्यूटर</button>
       <button class="landing_page_button" onclick="goToSubject('hindi_index')">हिंदी</button>
@@ -81,3 +81,4 @@
 </body>
 
 </html>
+
