--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 
 
 <body>  
-  <h1>CURRENTLY NOT AVAILABLE <BR> IT MAY AVALIABLE AFTER 15 DAYS </h1>
+   <button class="landing_page_button" onclick="goToSubject('indexCompititiveExam')">Compititive Exam Preparation</button>
+  
 </body>
 
 </html>
+
