--- a/index.html
+++ b/index.html
@@ -2,81 +2,63 @@
 <html lang="en">
 
 <head>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-SWF05JXP5G"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SWF05JXP5G"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-    gtag('config', 'G-SWF05JXP5G');
-  </script>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LearnWithPrathamesh.in</title>
-  <link rel="stylesheet" href="footerStyle.css">
-  <link rel="stylesheet" href="navBarStyle.css">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+        gtag('config', 'G-SWF05JXP5G');
+    </script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Landing_page</title>
+    <link rel="icon" type="png" href="favicon_logo.png">
+    <link rel="stylesheet" href="footerStyle.css">
+    <link rel="stylesheet" href="navBarStyle.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
 
 
-<body>  
+<body>
     <script src="navbar.js"></script>
-  <br>
-  <div class="landing_page">
-    <h1 class="select_sub_heading">SELECT YOUR PREPARATION JOURNEY</h1>
-    <div class="button-container">
-      <button class="landing_page_button" onclick="goToSubject('indexCompititiveExam')">Compititive Exam Preparation</button>
-      <!-- <button class="landing_page_button" onclick="goToSubject('indexUpBoardExam')">UP Board Exam Preparation</button> -->
-     
-    </div>
     <br>
-    <div class="info_container">
-      <p> &nbsp;&nbsp;&nbsp;&nbsp; Welcome to LearnWithPrathamesh.in, your go-to platform for high-quality, free study
-        material and quizzes for various competitive exams . We are committed to providing all aspiring
-        students with free, comprehensive, and easily accessible content. Our platform covers a wide
-        range of subjects including History, Geography, Science, Hindi, Computer , and English,
-        designed
-        to help you excel in exams like <br><br> <span style="color: rgb(220, 188, 11);"><b><u>UPSC, SSC,UPP, NDA, Railway,
-              State Exams and much more.</u></b></span>
-      </p><br><br>
-      <h2>Features of Our Website:</h2>
-      <br>
+    <div class="landing_page">
+        <h1 class="select_sub_heading">🚀 CHART YOUR SUCCESS PATH</h1>
+        <div class="button-container">
+            <div class="button-wrapper">
+                <button class="landing_page_button landing_page_button--animated  landing_page_button_margin "
+                    onclick="goToSubject('indexCompititiveExam')"> <H3 style="color: brown;">CLICK HERE</H3> - Competitive Exam Preparation</button>
+            </div>
+            
+        </div>
+        <br>
 
+        <div class="info_container glass-effect">
+            <h2>💡 Core Features & Mission</h2>
+            <div class="feature-grid">
+                <div class="feature-card">
+                    <h3>Comprehensive Material</h3>
+                    <p>Access high-quality, structured study guides covering **History, Science, Hindi, Geography and more**, broken down into easy-to-digest topics. **100% Free** forever.</p>
+                </div>
+                <div class="feature-card">
+                    <h3>Subject-Wise Quizzes</h3>
+                    <p>Test your knowledge instantly with our **interactive quizzes**. Track your progress and identify weak areas that require more focus for guaranteed mastery.</p>
+                </div>
+                <div class="feature-card">
+                    <h3>Targeted Exam Focus</h3>
+                    <p>Content specifically designed for exams like **UPSC, SSC, NDA, and various State Exams**. Focus your preparation with relevant and updated materials.</p>
+                </div>
+            </div>
+        </div>
 
-      <h3>Comprehensive Study Materials for Every Subject:</h3>
-
-      <p>&nbsp;&nbsp;&nbsp;&nbsp;Each subject is broken down into smaller topics and chapters, making it easier for you
-        to understand
-        and study systematically. All materials are free, ensuring that you have
-        access to all the resources you need at your fingertips.
-      </p><br>
-
-      <h3>Free and Accessible:</h3>
-      <p>&nbsp;&nbsp;&nbsp;&nbsp;All study materials and quizzes on LearnWithPrathamesh.in are completely free. We
-        believe that
-        quality education should be available to everyone, regardless of financial resources. Our goal
-        is to democratize learning by offering top-quality content at no cost.
-      </p><br>
-
-      <h3>Subject-Wise Quizzes:</h3>
-      <p>&nbsp;&nbsp;&nbsp;&nbsp;After studying each topic, you can test your knowledge with our subject-specific
-        quizzes. These
-        quizzes will help you track your progress, reinforce learning, and identify weak areas that need
-        more focus.
-
-        Regular practice will enhance your exam readiness and boost your confidence.
-      </p><br>
+        <div class="footer">
+            <p>&copy; 2025 LearnWithPrathamesh.in | Education for All</p>
+        </div>
     </div>
-  </div>
-  <div class="footer">
-
-  </div>
-  <script src="main.js"></script>
-  <script src="footer.js"></script>
-  
+    <script src="main.js"></script>
+    <script src="footer.js"></script>
 </body>
 
 </html>
-
-
