--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing_page</title>
+    <title>LearnWithPrathamesh</title>
     <link rel="icon" type="png" href="favicon_logo.png">
     <link rel="stylesheet" href="footerStyle.css">
     <link rel="stylesheet" href="navBarStyle.css">
@@ -62,3 +62,4 @@
 </body>
 
 </html>
+
