--- a/compititiveExam/samvidhan/1_samvidhanQuizTopic.html
+++ b/compititiveExam/samvidhan/1_samvidhanQuizTopic.html
@@ -27,9 +27,9 @@
     <h1>संविधान</h1>
     <div class="quiz_topic_button-container">
       
-      <button class="quiz_topic_button" onclick="goToQuiz('bhartiy_smvidhan_ka_etihas_1')">1. भारतीय संविधान का इतिहास </button>
+      <!-- <button class="quiz_topic_button" onclick="goToQuiz('bhartiy_smvidhan_ka_etihas_1')">1. भारतीय संविधान का इतिहास </button>
 
-      <button class="quiz_topic_button" onclick="goToQuiz('bhartiy_smvidhan_ka_nirman_1')">2. भारतीय संविधान का निर्माण </button>
+      <button class="quiz_topic_button" onclick="goToQuiz('bhartiy_smvidhan_ka_nirman_1')">2. भारतीय संविधान का निर्माण </button> -->
 
       <button class="quiz_topic_button" onclick="goToQuiz('bhartiy_smvidhan_sbhaAur_gathan_1')">3. भारतीय संविधान सभा और उसका गठन </button>
 
@@ -113,5 +113,6 @@
   </script>
   <script src="../../footer.js"></script>
 </body>
+
 
 </html>
