--- a/compititiveExam/samvidhanQuizFormatStdMtl/1_samvidhanQuizFormatStdMtlTopic.html
+++ b/compititiveExam/samvidhanQuizFormatStdMtl/1_samvidhanQuizFormatStdMtlTopic.html
@@ -27,9 +27,9 @@
     <h1>संविधान</h1>
     <div class="quiz_topic_button-container">
       
-      <button class="quiz_topic_button" onclick="goToQuiz('bhartiy_smvidhan_ka_etihas_SM_1')">1. भारतीय संविधान का इतिहास p1</button>
+      <!-- <button class="quiz_topic_button" onclick="goToQuiz('bhartiy_smvidhan_ka_etihas_SM_1')">1. भारतीय संविधान का इतिहास p1</button>
 
-      <button class="quiz_topic_button" onclick="goToQuiz('bhartiy_smvidhan_ka_nirman_SM_1')">2. भारतीय संविधान का निर्माण p1</button>
+      <button class="quiz_topic_button" onclick="goToQuiz('bhartiy_smvidhan_ka_nirman_SM_1')">2. भारतीय संविधान का निर्माण p1</button> -->
 
       <button class="quiz_topic_button" onclick="goToQuiz('bhartiy_smvidhan_sbhaAur_gathan_SM_1')">3. भारतीय संविधान सभा और उसका गठन p1</button>
 
@@ -113,5 +113,6 @@
   </script>
   <script src="../../footer.js"></script>
 </body>
+
 
 </html>
